--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    user-select: none;
 }
 #topMenu {
     background-color: #2a2b35;
